Supporting Enum + Applying SonarCloud recommendations (#38)
* Supporting Enum + Applying SonarCloud recommendations

* Rectification + redimentioning